sit-core/src/duktape/bindings.rs

pub const DUK_DEFPROP_CLEAR_WE: ::std::os::raw::c_uint = 24;
pub const DUK_DEFPROP_CLEAR_WC: ::std::os::raw::c_uint = 40;
pub const DUK_DEFPROP_CLEAR_WEC: ::std::os::raw::c_uint = 56;
pub const DUK_DEFPROP_ATTR_W: ::std::os::raw::c_uint = 57;
pub const DUK_DEFPROP_ATTR_E: ::std::os::raw::c_uint = 58;
pub const DUK_DEFPROP_ATTR_C: ::std::os::raw::c_uint = 60;
pub const DUK_DEFPROP_ATTR_WE: ::std::os::raw::c_uint = 59;
pub const DUK_DEFPROP_ATTR_WC: ::std::os::raw::c_uint = 61;
pub const DUK_DEFPROP_ATTR_WEC: ::std::os::raw::c_uint = 63;
pub const DUK_THREAD_NEW_GLOBAL_ENV: ::std::os::raw::c_uint = 1;
pub const DUK_GC_COMPACT: ::std::os::raw::c_uint = 1;
pub const DUK_ERR_NONE: ::std::os::raw::c_uint = 0;
pub const DUK_ERR_ERROR: ::std::os::raw::c_uint = 1;
pub const DUK_ERR_EVAL_ERROR: ::std::os::raw::c_uint = 2;
pub const DUK_ERR_RANGE_ERROR: ::std::os::raw::c_uint = 3;
pub const DUK_ERR_REFERENCE_ERROR: ::std::os::raw::c_uint = 4;
pub const DUK_ERR_SYNTAX_ERROR: ::std::os::raw::c_uint = 5;
pub const DUK_ERR_TYPE_ERROR: ::std::os::raw::c_uint = 6;
pub const DUK_ERR_URI_ERROR: ::std::os::raw::c_uint = 7;
pub const DUK_RET_ERROR: ::std::os::raw::c_int = -1;
pub const DUK_RET_EVAL_ERROR: ::std::os::raw::c_int = -2;
pub const DUK_RET_RANGE_ERROR: ::std::os::raw::c_int = -3;
pub const DUK_RET_REFERENCE_ERROR: ::std::os::raw::c_int = -4;
pub const DUK_RET_SYNTAX_ERROR: ::std::os::raw::c_int = -5;
pub const DUK_RET_TYPE_ERROR: ::std::os::raw::c_int = -6;
pub const DUK_RET_URI_ERROR: ::std::os::raw::c_int = -7;
pub const DUK_EXEC_SUCCESS: ::std::os::raw::c_uint = 0;
pub const DUK_EXEC_ERROR: ::std::os::raw::c_uint = 1;
pub const DUK_LEVEL_DEBUG: ::std::os::raw::c_uint = 0;
pub const DUK_LEVEL_DDEBUG: ::std::os::raw::c_uint = 1;
pub const DUK_LEVEL_DDDEBUG: ::std::os::raw::c_uint = 2;
pub const DUK_BUF_FLAG_DYNAMIC: ::std::os::raw::c_uint = 1;
pub const DUK_BUF_FLAG_EXTERNAL: ::std::os::raw::c_uint = 2;
pub const DUK_BUF_FLAG_NOZERO: ::std::os::raw::c_uint = 4;
pub const DUK_BUFOBJ_ARRAYBUFFER: ::std::os::raw::c_uint = 0;
pub const DUK_BUFOBJ_NODEJS_BUFFER: ::std::os::raw::c_uint = 1;
pub const DUK_BUFOBJ_DATAVIEW: ::std::os::raw::c_uint = 2;
pub const DUK_BUFOBJ_INT8ARRAY: ::std::os::raw::c_uint = 3;
pub const DUK_BUFOBJ_UINT8ARRAY: ::std::os::raw::c_uint = 4;
pub const DUK_BUFOBJ_UINT8CLAMPEDARRAY: ::std::os::raw::c_uint = 5;
pub const DUK_BUFOBJ_INT16ARRAY: ::std::os::raw::c_uint = 6;
pub const DUK_BUFOBJ_UINT16ARRAY: ::std::os::raw::c_uint = 7;
pub const DUK_BUFOBJ_INT32ARRAY: ::std::os::raw::c_uint = 8;
pub const DUK_BUFOBJ_UINT32ARRAY: ::std::os::raw::c_uint = 9;
pub const DUK_BUFOBJ_FLOAT32ARRAY: ::std::os::raw::c_uint = 10;
pub const DUK_BUFOBJ_FLOAT64ARRAY: ::std::os::raw::c_uint = 11;
pub const DUK_BUF_MODE_FIXED: ::std::os::raw::c_uint = 0;
pub const DUK_BUF_MODE_DYNAMIC: ::std::os::raw::c_uint = 1;
pub const DUK_BUF_MODE_DONTCARE: ::std::os::raw::c_uint = 2;
pub const DUK_DATE_MSEC_SECOND: ::std::os::raw::c_uint = 1000;
pub const DUK_DATE_MSEC_MINUTE: ::std::os::raw::c_uint = 60000;
pub const DUK_DATE_MSEC_HOUR: ::std::os::raw::c_uint = 3600000;
pub const DUK_DATE_MSEC_DAY: ::std::os::raw::c_uint = 86400000;
pub const DUK_DATE_MIN_ECMA_YEAR: ::std::os::raw::c_int = -271821;
pub const DUK_DATE_MAX_ECMA_YEAR: ::std::os::raw::c_uint = 275760;
pub const DUK_DATE_IDX_YEAR: ::std::os::raw::c_uint = 0;
pub const DUK_DATE_IDX_MONTH: ::std::os::raw::c_uint = 1;
pub const DUK_DATE_IDX_DAY: ::std::os::raw::c_uint = 2;
pub const DUK_DATE_IDX_HOUR: ::std::os::raw::c_uint = 3;
pub const DUK_DATE_IDX_MINUTE: ::std::os::raw::c_uint = 4;
pub const DUK_DATE_IDX_SECOND: ::std::os::raw::c_uint = 5;
pub const DUK_DATE_IDX_MILLISECOND: ::std::os::raw::c_uint = 6;
pub const DUK_DATE_IDX_WEEKDAY: ::std::os::raw::c_uint = 7;
pub const DUK_DATE_IDX_NUM_PARTS: ::std::os::raw::c_uint = 8;
pub const DUK_DATE_FLAG_NAN_TO_ZERO: ::std::os::raw::c_uint = 1;
pub const DUK_DATE_FLAG_NAN_TO_RANGE_ERROR: ::std::os::raw::c_uint = 2;
pub const DUK_DATE_FLAG_ONEBASED: ::std::os::raw::c_uint = 4;
pub const DUK_DATE_FLAG_EQUIVYEAR: ::std::os::raw::c_uint = 8;
pub const DUK_DATE_FLAG_LOCALTIME: ::std::os::raw::c_uint = 16;
pub const DUK_DATE_FLAG_SUB1900: ::std::os::raw::c_uint = 32;
pub const DUK_DATE_FLAG_TOSTRING_DATE: ::std::os::raw::c_uint = 64;
pub const DUK_DATE_FLAG_TOSTRING_TIME: ::std::os::raw::c_uint = 128;
pub const DUK_DATE_FLAG_TOSTRING_LOCALE: ::std::os::raw::c_uint = 256;
pub const DUK_DATE_FLAG_TIMESETTER: ::std::os::raw::c_uint = 512;
pub const DUK_DATE_FLAG_YEAR_FIXUP: ::std::os::raw::c_uint = 1024;
pub const DUK_DATE_FLAG_SEP_T: ::std::os::raw::c_uint = 2048;
pub const DUK_DATE_FLAG_VALUE_SHIFT: ::std::os::raw::c_uint = 12;
pub type va_list = __builtin_va_list;
pub type duk_uint16_t = u16;
pub type duk_uint32_t = u32;
pub type duk_int32_t = i32;
pub type duk_size_t = usize;
pub type duk_int_t = ::std::os::raw::c_int;
pub type duk_uint_t = ::std::os::raw::c_uint;
pub type duk_small_int_t = ::std::os::raw::c_int;
pub type duk_small_uint_t = ::std::os::raw::c_uint;
pub type duk_bool_t = duk_small_uint_t;
pub type duk_idx_t = duk_int_t;
pub type duk_uarridx_t = duk_uint_t;
pub type duk_ret_t = duk_small_int_t;
pub type duk_errcode_t = duk_int_t;
pub type duk_codepoint_t = duk_int_t;
pub type duk_double_t = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duk_hthread {
    _unused: [u8; 0],
}
pub type duk_context = duk_hthread;
#[repr(C)]
#[derive(Copy)]
pub struct duk_thread_state {
    pub data: [::std::os::raw::c_char; 128usize],
}
#[test]
fn bindgen_test_layout_duk_thread_state() {
    assert_eq!(::std::mem::size_of::<duk_thread_state>() , 128usize , concat !
               ( "Size of: " , stringify ! ( duk_thread_state ) ));
    assert_eq! (::std::mem::align_of::<duk_thread_state>() , 1usize , concat !
                ( "Alignment of " , stringify ! ( duk_thread_state ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_thread_state ) ) . data as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_thread_state ) ,
                "::" , stringify ! ( data ) ));
}
impl Clone for duk_thread_state {
    fn clone(&self) -> Self { *self }
}
#[repr(C)]
#[derive(Debug, Copy)]
pub struct duk_memory_functions {
    pub alloc_func: duk_alloc_function,
    pub realloc_func: duk_realloc_function,
    pub free_func: duk_free_function,
    pub udata: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_duk_memory_functions() {
    assert_eq!(::std::mem::size_of::<duk_memory_functions>() , 32usize ,
               concat ! ( "Size of: " , stringify ! ( duk_memory_functions )
               ));
    assert_eq! (::std::mem::align_of::<duk_memory_functions>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( duk_memory_functions ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_memory_functions ) ) . alloc_func as
                * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_memory_functions )
                , "::" , stringify ! ( alloc_func ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_memory_functions ) ) . realloc_func
                as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_memory_functions )
                , "::" , stringify ! ( realloc_func ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_memory_functions ) ) . free_func as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_memory_functions )
                , "::" , stringify ! ( free_func ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_memory_functions ) ) . udata as *
                const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_memory_functions )
                , "::" , stringify ! ( udata ) ));
}
impl Clone for duk_memory_functions {
    fn clone(&self) -> Self { *self }
}
#[repr(C)]
#[derive(Debug, Copy)]
pub struct duk_function_list_entry {
    pub key: *const ::std::os::raw::c_char,
    pub value: duk_c_function,
    pub nargs: duk_idx_t,
}
#[test]
fn bindgen_test_layout_duk_function_list_entry() {
    assert_eq!(::std::mem::size_of::<duk_function_list_entry>() , 24usize ,
               concat ! (
               "Size of: " , stringify ! ( duk_function_list_entry ) ));
    assert_eq! (::std::mem::align_of::<duk_function_list_entry>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( duk_function_list_entry ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_function_list_entry ) ) . key as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_function_list_entry
                ) , "::" , stringify ! ( key ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_function_list_entry ) ) . value as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_function_list_entry
                ) , "::" , stringify ! ( value ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_function_list_entry ) ) . nargs as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_function_list_entry
                ) , "::" , stringify ! ( nargs ) ));
}
impl Clone for duk_function_list_entry {
    fn clone(&self) -> Self { *self }
}
#[repr(C)]
#[derive(Debug, Copy)]
pub struct duk_number_list_entry {
    pub key: *const ::std::os::raw::c_char,
    pub value: duk_double_t,
}
#[test]
fn bindgen_test_layout_duk_number_list_entry() {
    assert_eq!(::std::mem::size_of::<duk_number_list_entry>() , 16usize ,
               concat ! ( "Size of: " , stringify ! ( duk_number_list_entry )
               ));
    assert_eq! (::std::mem::align_of::<duk_number_list_entry>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( duk_number_list_entry ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_number_list_entry ) ) . key as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_number_list_entry )
                , "::" , stringify ! ( key ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_number_list_entry ) ) . value as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_number_list_entry )
                , "::" , stringify ! ( value ) ));
}
impl Clone for duk_number_list_entry {
    fn clone(&self) -> Self { *self }
}
#[repr(C)]
#[derive(Debug, Copy)]
pub struct duk_time_components {
    pub year: duk_double_t,
    pub month: duk_double_t,
    pub day: duk_double_t,
    pub hours: duk_double_t,
    pub minutes: duk_double_t,
    pub seconds: duk_double_t,
    pub milliseconds: duk_double_t,
    pub weekday: duk_double_t,
}
